[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.10.1",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]

[tool.uv]
exclude-newer = "2025-09-29T00:00:00Z"

[tool.ruff.lint]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
